added masked text field for passing API keys from frontend

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         </header>
 
         <form id="blogForm">
+            <label for="openaiKey">OpenAI API Key:</label>
+            <input type="password" id="openaiKey" placeholder="sk-..." required>
+            <label for="serperKey">Serper API Key:</label>
+            <input type="password" id="serperKey" placeholder="********************************">
+            
             <label for="topicInput">Enter Blog Topic:</label>
             <input type="text" id="topicInput" placeholder="e.g., 'The Future of Renewable Energy'" required>
             <button type="submit" id="generateButton">
